초기세팅 수정완료

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nike. Just Do It. Nike 코리아</title>
+  <title>Niweke | Korea</title>
 </head>
 
 <body>
